--- a/src/styles/admin/admin.scss
+++ b/src/styles/admin/admin.scss
@@ -9,56 +9,12 @@
     padding-top: 4em;
 }
 
-.user-id-card
-{
-	min-height: 100px;
-	display: flex;
-	align-items: center;
-	background-image: url('../../admin/user-bg.png');
-
-	div:first-child
-	{
-		padding: 0.5em;
-	}
-
-	.controls a
-	{
-		font-size: 10px;
-		text-decoration: none;
-		text-transform: uppercase;
-		display: inline-block;
-		margin-right: 1em;
-	}
-
-	.controls a,
-	.controls a:visited
-	{
-		color: #2196F3;
-	}
-
-	p 
-	{
-		margin: 0;
-	}
-
-	.user-profile-pic
-	{
-		border-radius: 8em;
-		box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-	}
-}
-
-.user-id-card .role
-{
-	font-size: 9px;
-}
-
-
 #admin {
 
 	main
 	{
 		height: 100%;
+		background-color: #F9F9F9;
 
 		> div:first-child
 		{
@@ -83,17 +39,8 @@
 	}
 
 	#adminDashboard {
-		padding: 20px;
 		display: flex;
-		background: #F9F9F9;
 		height: 100%;
-
-		header
-		{
-			display: flex;
-			height: 41px;
-			justify-content: center;
-		}
 
 		h3 {
 			display: inline-flex;
