--- a/src/admin/sitemanager/site-list.scss
+++ b/src/admin/sitemanager/site-list.scss
@@ -54,3 +54,18 @@
 {
 	padding: 0 1.2em;
 }
+
+.modal.active
+{
+	display: flex;
+
+}
+
+#siteDetails > router-view
+{
+	-webkit-align-items: center;
+   align-items: center;
+   -webkit-justify-content: center;
+   justify-content: center;
+   display: flex;
+}
