--- a/src/styles/zencss-guide/zencss.scss
+++ b/src/styles/zencss-guide/zencss.scss
@@ -5,7 +5,6 @@
     color: #666;
     padding-left: 250px;
     height: 100%;
-    overflow:  hidden;
     padding-top: 4em;
     width: 100%;
 }
@@ -28,6 +27,7 @@ icon-index
 	height: 100%;
 	overflow-y: scroll;
 	position: relative;
+	overflow-x: hidden;
 }
 
 #zencss
