--- a/src/styles/zencss/base/reset/_normalize.scss
+++ b/src/styles/zencss/base/reset/_normalize.scss
@@ -15,6 +15,9 @@ html {
   line-height: 1.15; /* 2 */
   -ms-text-size-adjust: 100%; /* 3 */
   -webkit-text-size-adjust: 100%; /* 3 */
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 /* Sections
@@ -26,6 +29,7 @@ html {
 
 body {
   margin: 0;
+  height: 100%;
 }
 
 /**
