--- a/src/styles/zencss/layout/navigation/list.scss
+++ b/src/styles/zencss/layout/navigation/list.scss
@@ -21,8 +21,10 @@ nav-list .site-map li
 
 nav-list .site-map a
 {
-	padding: 1em 1.46em;
-	display: block;
+	padding: 0 1.46em;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
 	text-decoration: none;
 	color: #737373;
     font-size: 13px;
@@ -82,10 +84,19 @@ nav-list .site-map a .fa
 nav-list .site-map a .fa-chevron-down
 {
 	float: right;
-    margin: 3px 0;
     color: #29b6f6;
     font-size: 1em;
+    margin-left: auto;
 }
+
+nav-list .site-map
+{
+	> li > a icon:last-child
+	{
+		margin-left: auto;
+	}
+} 
+
 
 nav-list .fa {
     font-size: 1.35em;
