converted all local css files to scss

--- a/src/tour/home/call-to-action/call-to-action.scss
+++ b/src/tour/home/call-to-action/call-to-action.scss
@@ -1,7 +1,7 @@
 #call-to-action
 {
 
-	background:  url('../../../src/tour/home/call-to-action/pic02.jpg') no-repeat center center fixed;
+	background:  url('./pic02.jpg') no-repeat center center fixed;
 
 	background-size: cover;
 }
