--- a/src/tour/home/header/header.scss
+++ b/src/tour/home/header/header.scss
@@ -6,7 +6,7 @@
 	justify-content: center;
 	background: 
 				linear-gradient(to right, rgba(110, 77, 155, 1), rgba(232, 40, 135, 0.25)),
-				url('../../../src/tour/home/header/background-img.jpg') no-repeat center center fixed;
+				url('./background-img.jpg') no-repeat center center fixed;
 	background-size: cover;
 	color:  #fff;
 }
